fixed bug with about spacing

--- a/portfolio/styles/index.scss
+++ b/portfolio/styles/index.scss
@@ -66,6 +66,8 @@ nav {
   margin-left: 10%;
   margin-right: 35%;
   padding-top: 5%;
+  height: 100vh;
+  // border: solid red;
 
   h1 {
     font-size: 2em;
